[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://characters/Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/player/Player.tscn" type="PackedScene" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 856, 0, 0, 0, 0, 0, 856, 480, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 0 )
}

[node name="Game" type="Node"]
script = ExtResource( 1 )
player_scene = ExtResource( 3 )
mob_scene = ExtResource( 2 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.4

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
